Still trying to find why we have random crashes for the JVM